--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-GRAPHQL_ENDPOINT="https://https://chaungourtee.com/4/5403633/graphql/"
+GRAPHQL_ENDPOINT="https://https://chaungourtee.com/graphql/"
